{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 26,
  "lineage": "e468c487-0a02-98e1-6e42-233e47f6d1bb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myeip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e24542128dfa9f51",
            "domain": "vpc",
            "id": "eipalloc-0e24542128dfa9f51",
            "network_border_group": "ap-south-1",
            "private_dns": "ip-10-0-1-123.ap-south-1.compute.internal",
            "public_dns": "ec2-13-126-165-173.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.165.173",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:377099924270:internet-gateway/igw-0a101d466f2a9fdf4",
            "id": "igw-0a101d466f2a9fdf4",
            "owner_id": "377099924270",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-05fbe76d8ef081b0f"
          },
          "dependencies": [
            "aws_vpc.VPC-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PUB-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:377099924270:route-table/rtb-01cb28df6be92d531",
            "id": "rtb-01cb28df6be92d531",
            "owner_id": "377099924270",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a101d466f2a9fdf4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PUB-RT"
            },
            "tags_all": {
              "Name": "PUB-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-05fbe76d8ef081b0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.VPC-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PVT-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:377099924270:route-table/rtb-039ae17ca745bf749",
            "id": "rtb-039ae17ca745bf749",
            "owner_id": "377099924270",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-044d2e3641a4fbf4a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Pvt-RT"
            },
            "tags_all": {
              "Name": "Pvt-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-05fbe76d8ef081b0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.myeip",
            "aws_nat_gateway.myngw",
            "aws_subnet.PUB-SUB",
            "aws_vpc.VPC-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-ASSOCIATION-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ec34b83f574fed0",
            "route_table_id": "rtb-039ae17ca745bf749",
            "subnet_id": "subnet-052daadf7b025dd44"
          },
          "dependencies": [
            "aws_eip.myeip",
            "aws_nat_gateway.myngw",
            "aws_route_table.PVT-RT",
            "aws_subnet.PUB-SUB",
            "aws_subnet.PVT-SUB",
            "aws_vpc.VPC-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:377099924270:security-group/sg-0f89988a4d001ac9a",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f89988a4d001ac9a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ALL TCP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ALL TCP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-01",
            "name_prefix": "",
            "owner_id": "377099924270",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-01"
            },
            "tags_all": {
              "Name": "SG-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-05fbe76d8ef081b0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:377099924270:security-group/sg-0d226aee40edefd6c",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d226aee40edefd6c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ALL TCP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f89988a4d001ac9a"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "ALL TCP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f89988a4d001ac9a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-02",
            "name_prefix": "",
            "owner_id": "377099924270",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-02"
            },
            "tags_all": {
              "Name": "SG-02"
            },
            "timeouts": null,
            "vpc_id": "vpc-05fbe76d8ef081b0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG-01",
            "aws_vpc.VPC-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PVT-SUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:377099924270:subnet/subnet-052daadf7b025dd44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052daadf7b025dd44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "377099924270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "vpc_id": "vpc-05fbe76d8ef081b0f"
          },
          "dependencies": [
            "aws_vpc.VPC-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:377099924270:vpc/vpc-05fbe76d8ef081b0f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-097210c1bb39160d8",
            "default_route_table_id": "rtb-0e514ead10ed21c4a",
            "default_security_group_id": "sg-09671045aad217439",
            "dhcp_options_id": "dopt-004d866beb7ab72a3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05fbe76d8ef081b0f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e514ead10ed21c4a",
            "owner_id": "377099924270",
            "tags": {
              "Name": "MY-VPC"
            },
            "tags_all": {
              "Name": "MY-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-01A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:377099924270:vpc/vpc-04f2b09cd3d552803",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f264150b2950c175",
            "default_route_table_id": "rtb-09e0a90a10ad01270",
            "default_security_group_id": "sg-02ae9905c77b3dcf4",
            "dhcp_options_id": "dopt-004d866beb7ab72a3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04f2b09cd3d552803",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e0a90a10ad01270",
            "owner_id": "377099924270",
            "tags": {
              "Name": "MY-VPC",
              "provider": "aws.viki"
            },
            "tags_all": {
              "Name": "MY-VPC",
              "provider": "aws.viki"
            }
          }
        }
      ]
    }
  ]
}